docs/v0.1.0/_sources/gallery/classifier_dense.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/classifier_dense.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_classifier_dense.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_classifier_dense.py:


DenseNet Deconvolver: Reconstructing Clean Pulse Traces
=======================================================================

This example demonstrates how to train DeepPeak's DenseNet as a deconvolver.

We will:
- Generate a dataset of noisy signals with random Gaussian peaks
- Build and train a DenseNet reconstruction model
- Visualize the training process and reconstructed signals

.. note::
    This example is fully reproducible and suitable for Sphinx-Gallery documentation.

.. GENERATED FROM PYTHON SOURCE LINES 18-20

Imports and reproducibility
-----------------------------

.. GENERATED FROM PYTHON SOURCE LINES 20-28

.. code-block:: Python

    import numpy as np

    from DeepPeak.models import DenseNet
    from DeepPeak.generation import SignalGenerator
    from DeepPeak import Lorentzian, UniformCount

    np.random.seed(42)








.. GENERATED FROM PYTHON SOURCE LINES 29-31

Generate synthetic dataset
---------------------------

.. GENERATED FROM PYTHON SOURCE LINES 31-50

.. code-block:: Python

    NUM_PEAKS = 3
    SEQUENCE_LENGTH = 200

    pulse_kernel = Lorentzian(
        amplitude=(10, 30),
        position=(0, SEQUENCE_LENGTH),
        width=(3, 6),
    )

    generator = SignalGenerator(sequence_length=SEQUENCE_LENGTH)

    dataset = generator.generate(
        n_samples=300,
        kernel=pulse_kernel,
        peak_count=UniformCount(bounds=(1, NUM_PEAKS)),
        noise_std=0.1,
        categorical_peak_count=False,
    )








.. GENERATED FROM PYTHON SOURCE LINES 51-53

Visualize observed and clean example signals
-------------------------------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: Python

    dataset.plot(number_of_samples=3, reference_pulse_trace=dataset.clean_signals)




.. image-sg:: /gallery/images/sphx_glr_classifier_dense_001.png
   :alt: Sample 0, Sample 1, Sample 2
   :srcset: /gallery/images/sphx_glr_classifier_dense_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x900 with 3 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 56-58

Build and summarize the DenseNet deconvolver
-------------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 58-70

.. code-block:: Python

    dense_net = DenseNet(
        sequence_length=SEQUENCE_LENGTH,
        filters=(32, 64, 128),
        dilation_rates=(1, 2, 4),
        kernel_size=3,
        optimizer="adam",
        loss="huber",
        metrics=["mae"],
    )
    dense_net.build()
    dense_net.summary()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Model: "DenseNetDeconvolver"
    ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓
    ┃ Layer (type)                    ┃ Output Shape           ┃       Param # ┃
    ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩
    │ input (InputLayer)              │ (None, 200, 1)         │             0 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_0 (Conv1D)                 │ (None, 200, 32)        │           128 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_1 (Conv1D)                 │ (None, 200, 64)        │         6,208 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_2 (Conv1D)                 │ (None, 200, 128)       │        24,704 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ reconstruction (Conv1D)         │ (None, 200, 1)         │           129 │
    └─────────────────────────────────┴────────────────────────┴───────────────┘
     Total params: 31,169 (121.75 KB)
     Trainable params: 31,169 (121.75 KB)
     Non-trainable params: 0 (0.00 B)




.. GENERATED FROM PYTHON SOURCE LINES 71-73

Train against clean pulse traces
--------------------

.. GENERATED FROM PYTHON SOURCE LINES 73-81

.. code-block:: Python

    history = dense_net.fit(
        dataset.signals,
        dataset.clean_signals[..., None],
        validation_split=0.2,
        epochs=20,
        batch_size=64,
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Epoch 1/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 2s 973ms/step - loss: 2.7036 - mae: 3.0239    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 23ms/step - loss: 2.1776 - mae: 2.4699     4/4 ━━━━━━━━━━━━━━━━━━━━ 1s 85ms/step - loss: 2.1776 - mae: 2.4699 - val_loss: 1.4387 - val_mae: 1.6836
    Epoch 2/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 1.3324 - mae: 1.5777    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.9963 - mae: 1.2025    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.9963 - mae: 1.2025 - val_loss: 0.4027 - val_mae: 0.5763
    Epoch 3/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.4012 - mae: 0.5786    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 23ms/step - loss: 0.4872 - mae: 0.7257    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.4872 - mae: 0.7257 - val_loss: 0.6534 - val_mae: 0.9326
    Epoch 4/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.5952 - mae: 0.8721    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.5416 - mae: 0.8028    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.5416 - mae: 0.8028 - val_loss: 0.3411 - val_mae: 0.5379
    Epoch 5/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.3280 - mae: 0.5211    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.3211 - mae: 0.4740    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.3211 - mae: 0.4740 - val_loss: 0.3551 - val_mae: 0.4710
    Epoch 6/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - loss: 0.3573 - mae: 0.4770    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.3323 - mae: 0.4495    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.3323 - mae: 0.4495 - val_loss: 0.2384 - val_mae: 0.3407
    Epoch 7/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.2210 - mae: 0.3182    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.1867 - mae: 0.2979    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.1867 - mae: 0.2979 - val_loss: 0.1762 - val_mae: 0.3137
    Epoch 8/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - loss: 0.1735 - mae: 0.3147    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - loss: 0.1508 - mae: 0.2797    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.1508 - mae: 0.2797 - val_loss: 0.0783 - val_mae: 0.1694
    Epoch 9/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - loss: 0.0795 - mae: 0.1691    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - loss: 0.0911 - mae: 0.2105    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0911 - mae: 0.2105 - val_loss: 0.0808 - val_mae: 0.2111
    Epoch 10/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0856 - mae: 0.2168    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0772 - mae: 0.1933    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0772 - mae: 0.1933 - val_loss: 0.0910 - val_mae: 0.1962
    Epoch 11/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0931 - mae: 0.1960    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0741 - mae: 0.1899    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0741 - mae: 0.1899 - val_loss: 0.0774 - val_mae: 0.2079
    Epoch 12/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0756 - mae: 0.2114    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0610 - mae: 0.1768    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0610 - mae: 0.1768 - val_loss: 0.0540 - val_mae: 0.1396
    Epoch 13/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0481 - mae: 0.1341    3/4 ━━━━━━━━━━━━━━━━━━━━ 0s 25ms/step - loss: 0.0514 - mae: 0.1344    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 38ms/step - loss: 0.0490 - mae: 0.1310 - val_loss: 0.0453 - val_mae: 0.1273
    Epoch 14/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - loss: 0.0347 - mae: 0.1149    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0427 - mae: 0.1232    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0427 - mae: 0.1232 - val_loss: 0.0391 - val_mae: 0.1116
    Epoch 15/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - loss: 0.0342 - mae: 0.1033    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0364 - mae: 0.1094    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0364 - mae: 0.1094 - val_loss: 0.0332 - val_mae: 0.1014
    Epoch 16/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - loss: 0.0299 - mae: 0.0986    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0305 - mae: 0.0997    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0305 - mae: 0.0997 - val_loss: 0.0282 - val_mae: 0.0925
    Epoch 17/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - loss: 0.0211 - mae: 0.0821    3/4 ━━━━━━━━━━━━━━━━━━━━ 0s 28ms/step - loss: 0.0246 - mae: 0.0885    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - loss: 0.0261 - mae: 0.0902 - val_loss: 0.0256 - val_mae: 0.0910
    Epoch 18/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 38ms/step - loss: 0.0205 - mae: 0.0826    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 23ms/step - loss: 0.0231 - mae: 0.0877    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 38ms/step - loss: 0.0231 - mae: 0.0877 - val_loss: 0.0226 - val_mae: 0.0829
    Epoch 19/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 40ms/step - loss: 0.0210 - mae: 0.0809    3/4 ━━━━━━━━━━━━━━━━━━━━ 0s 26ms/step - loss: 0.0208 - mae: 0.0797    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 38ms/step - loss: 0.0203 - mae: 0.0787 - val_loss: 0.0201 - val_mae: 0.0783
    Epoch 20/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 39ms/step - loss: 0.0126 - mae: 0.0695    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - loss: 0.0177 - mae: 0.0734    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - loss: 0.0177 - mae: 0.0734 - val_loss: 0.0175 - val_mae: 0.0736




.. GENERATED FROM PYTHON SOURCE LINES 82-84

Plot training history
---------------------

.. GENERATED FROM PYTHON SOURCE LINES 84-85

.. code-block:: Python

    dense_net.plot_model_history()



.. image-sg:: /gallery/images/sphx_glr_classifier_dense_002.png
   :alt: Losses, Metrics
   :srcset: /gallery/images/sphx_glr_classifier_dense_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 900x720 with 2 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.879 seconds)


.. _sphx_glr_download_gallery_classifier_dense.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: classifier_dense.ipynb <classifier_dense.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: classifier_dense.py <classifier_dense.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: classifier_dense.zip <classifier_dense.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
